--- a/index.html
+++ b/index.html
@@ -1,27 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./postkart.css">
-    <title>Document</title>
-</head>
-<body>
-    <div class="b50">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="./postkart.css" />
+        <title>Document</title>
+    </head>
+    <body>
+        <div class="b50">
+            <img src="./rick-sanchez.jpg" alt="" />
 
-    <img src="./rick-sanchez.jpg" alt="">
-    
-      <ul class="child">
-
-        <li><a href="#">Rick</a></li>
-        <li><a href="#">sanchez</a></li>
-
-      </ul>
-
-    </div>
-
-
-
-</body>
+            <ul class="child">
+                <li><a href="#">Rick</a></li>
+                <li><a href="#">sanchez</a></li>
+            </ul>
+        </div>
+    </body>
 </html>
